--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     />
   </head>
   <body>
+    <!-- header area -->
+    <header class="bg-primary p-3">
+      <h1 class="text-center text-white fs-2 fw-bold">
+        Welcome To Phone House
+      </h1>
+    </header>
     <!-- add boosttrap js -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
