--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <!-- custom css -->
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- header area -->
@@ -20,6 +22,20 @@
         Welcome To Phone House
       </h1>
     </header>
+    <main>
+      <!-- search phone -->
+      <section class="container mt-5">
+        <div class="input-group w-50 mx-auto w-search">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="search phone"
+            aria-label="Recipient's username with two button addons"
+          />
+          <button class="btn btn-primary fs-5" type="button">search</button>
+        </div>
+      </section>
+    </main>
     <!-- add boosttrap js -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
