--- a/index.html
+++ b/index.html
@@ -27,12 +27,19 @@
       <section class="container mt-5">
         <div class="input-group w-50 mx-auto w-search">
           <input
+            id="search-phone"
             type="text"
             class="form-control"
             placeholder="search phone"
             aria-label="Recipient's username with two button addons"
           />
-          <button class="btn btn-primary fs-5" type="button">search</button>
+          <button
+            onclick="loadPhones()"
+            class="btn btn-primary fs-5"
+            type="button"
+          >
+            search
+          </button>
         </div>
       </section>
     </main>
