--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         Welcome To Phone House
       </h1>
     </header>
-    <main>
+    <main class="mb-5">
       <!-- search phone -->
       <section class="container mt-5">
         <div class="input-group w-50 mx-auto w-search">
@@ -41,6 +41,8 @@
             search
           </button>
         </div>
+        <!-- phone container -->
+        <div id="phone-container" class="row g-4 mt-5"></div>
       </section>
     </main>
     <!-- add boosttrap js -->
