show phone info

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             search
           </button>
         </div>
+        <!-- show phone info -->
+        <div id="showPhoneInfo" class="mt-5"></div>
         <!-- phone container -->
         <div id="phone-container" class="row g-4 mt-5"></div>
       </section>
