search input validation

--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
             search
           </button>
         </div>
+        <!-- show error message -->
+        <div id="error-message" class="text-center mt-4">
+          <h4 class="fs-2 fw-bold text-danger">No Relesed Date Found!</h4>
+        </div>
         <!-- show phone info -->
         <div id="showPhoneInfo" class="mt-5"></div>
+
         <!-- phone container -->
         <div id="phone-container" class="row g-4 mt-5"></div>
       </section>
