--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
         </div>
         <!-- show phone info -->
         <div id="showPhoneInfo" class="mt-5"></div>
-
+        <!-- Total product list -->
+        <div class="fs-4 fw-bold">
+          <p id="productList"></p>
+        </div>
         <!-- phone container -->
-        <div id="phone-container" class="row g-4 mt-5"></div>
+        <div id="phone-container" class="row g-4 mt-3"></div>
       </section>
     </main>
     <!-- add boosttrap js -->
