input fild required updated

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             class="form-control"
             placeholder="search phone"
             aria-label="Recipient's username with two button addons"
+            required
           />
           <button
             onclick="loadPhones()"
